--- a/index.html
+++ b/index.html
@@ -48,5 +48,13 @@
                 <img src="Portfolio/Dark 5.jpg" alt="">
          </div>
 </section>
+<section id="services">
+    <h1 class="headings">SERVICES</h1>
+    <div class="box">
+        <h1 class="headings">website Design</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda.Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda</p>
+    </div>
+
+</section>
 </body>
 </html>
