--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
     <h1 class="headings">SERVICES</h1>
     <div class="box">
         <h1 class="headings">website Design</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda.Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda.
+            <br> 
+
+            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+    </div>
+    <div class="box">
+        <h1 class="headings">page Design</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda.
+            <br> 
+
+            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+    </div>
+    <div class="box">
+        <h1 class="headings">website Design</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur neque molestias eos perferendis suscipit quibusdam eligendi rem repudiandae ipsum incidunt delectus rerum dolores, consequuntur, error voluptate non aut alias assumenda.
+            <br> 
+
+            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
     </div>
 
 </section>
